fixing dark mode issue in card title

--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -70,8 +70,6 @@
     font-size: 1.3rem;
     font-weight: 500;
     margin-bottom: 0.5rem;
-    color: #000000;
-    transition: all 0.3s linear;
 }
 .news-link {
     text-decoration: none;
